vix/tests/checker-corpus/reject/unknown-struct-field.vix
struct Config {
    name: String,
}

fn main() -> Config {
    Config { missing: "a" }
}
